[gd_scene load_steps=9 format=3 uid="uid://bor0f34yh2ofm"]

[ext_resource type="PackedScene" uid="uid://drsuhja1myvjv" path="res://Scenes/GameMainScreenScenes/GameScenes/resource_screen.tscn" id="1_xrfx0"]
[ext_resource type="PackedScene" uid="uid://3les52jwhf8" path="res://Scenes/GameMainScreenScenes/GameScenes/upgrades_section.tscn" id="2_2ryuy"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/ImprovementsScreen.gd" id="2_rw7nq"]
[ext_resource type="PackedScene" uid="uid://2xsk4oroe8q7" path="res://Scenes/GameMainScreenScenes/GameScenes/research_section.tscn" id="4_lynq2"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/ResourceTicks.gd" id="4_ojdqe"]
[ext_resource type="PackedScene" uid="uid://btne0bg2tjivh" path="res://Scenes/GameMainScreenScenes/GameScenes/market_section.tscn" id="5_htdo4"]
[ext_resource type="PackedScene" uid="uid://dmpunawnh13ed" path="res://Scenes/GameMainScreenScenes/GameScenes/magic_section.tscn" id="6_b5lsl"]
[ext_resource type="PackedScene" uid="uid://dgw2ln358unw8" path="res://Scenes/GameMainScreenScenes/GameScenes/dam_section.tscn" id="7_esmds"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameScreenHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourceScreen" parent="GameScreenHBox" instance=ExtResource("1_xrfx0")]
layout_mode = 2

[node name="ImprovementsScreen" type="MarginContainer" parent="GameScreenHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("2_rw7nq")

[node name="Background" type="ColorRect" parent="GameScreenHBox/ImprovementsScreen"]
layout_mode = 2
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="RightVBox" type="VBoxContainer" parent="GameScreenHBox/ImprovementsScreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopMenuMC" type="MarginContainer" parent="GameScreenHBox/ImprovementsScreen/RightVBox"]
custom_minimum_size = Vector2(100, 85)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="CR" type="ColorRect" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC"]
layout_mode = 2
color = Color(0.305882, 0.321569, 0.392157, 1)

[node name="ButtonMC" type="MarginContainer" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC"]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 7

[node name="VBox" type="HBoxContainer" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="UpgradesButton" type="Button" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upgrades"

[node name="ResearchButton" type="Button" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Research"

[node name="MarketButton" type="Button" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Market"

[node name="MagicButton" type="Button" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Magic"

[node name="DamButton" type="Button" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dam"

[node name="TabsMC" type="MarginContainer" parent="GameScreenHBox/ImprovementsScreen/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="UpgradesSection" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TabsMC" instance=ExtResource("2_2ryuy")]
layout_mode = 2

[node name="ResearchSection" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TabsMC" instance=ExtResource("4_lynq2")]
visible = false
layout_mode = 2

[node name="MarketSection" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TabsMC" instance=ExtResource("5_htdo4")]
visible = false
layout_mode = 2

[node name="MagicSection" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TabsMC" instance=ExtResource("6_b5lsl")]
visible = false
layout_mode = 2

[node name="DamSection" parent="GameScreenHBox/ImprovementsScreen/RightVBox/TabsMC" instance=ExtResource("7_esmds")]
visible = false
layout_mode = 2

[node name="ResourceTicks" type="Node" parent="."]
script = ExtResource("4_ojdqe")

[node name="ResourceGainTick" type="Timer" parent="ResourceTicks"]
autostart = true

[connection signal="button_down" from="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox/UpgradesButton" to="GameScreenHBox/ImprovementsScreen" method="_on_upgrades_button_button_down"]
[connection signal="button_down" from="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox/ResearchButton" to="GameScreenHBox/ImprovementsScreen" method="_on_research_button_button_down"]
[connection signal="button_down" from="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox/MarketButton" to="GameScreenHBox/ImprovementsScreen" method="_on_market_button_button_down"]
[connection signal="button_down" from="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox/MagicButton" to="GameScreenHBox/ImprovementsScreen" method="_on_magic_button_button_down"]
[connection signal="button_down" from="GameScreenHBox/ImprovementsScreen/RightVBox/TopMenuMC/ButtonMC/VBox/DamButton" to="GameScreenHBox/ImprovementsScreen" method="_on_dam_button_button_down"]
[connection signal="timeout" from="ResourceTicks/ResourceGainTick" to="ResourceTicks" method="_on_resource_gain_tick_timeout"]
